[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node"]
script = ExtResource( 1 )

[node name="HostBtn" type="Button" parent="."]
margin_left = 320.0
margin_top = 128.0
margin_right = 704.0
margin_bottom = 192.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinBtn" type="Button" parent="."]
margin_left = 320.0
margin_top = 320.0
margin_right = 704.0
margin_bottom = 384.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HostBtn" to="." method="_on_HostBtn_pressed"]
[connection signal="pressed" from="JoinBtn" to="." method="_on_JoinBtn_pressed"]
